--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     />
 
     <title>Frontend Mentor | Recipe page</title>
-
+    <!-- Tailwindcss cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
