--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap");
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -24,101 +25,127 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
+      .text-brown {
+        color: #5c4033;
+      }
+      h1,
+      h2 {
+        font-family: "Young Serif", serif;
+      }
+
+      h3 {
+        font-family: "Outfit", sans-serif;
+      }
     </style>
   </head>
-  <body>
-    <h1>Simple Omelette Recipe</h1>
-    <p>
-      An easy and quick dish, perfect for any meal. This classic omelette
-      combines beaten eggs cooked to perfection, optionally filled with your
-      choice of cheese, vegetables, or meats.
-    </p>
+  <body class="bg-pink-200">
+    <main class="flex justify-center md:py-10">
+      <div class="w-[650px] rounded-lg bg-white">
+        <div class="mb-7 md:p-7">
+          <img
+            class="rounded-lg"
+            src="./assets/images/image-omelette.jpeg"
+            alt="Omelette image"
+          />
+        </div>
+        <div class="space-y-7 px-7">
+          <h1 class="text-3xl font-bold">Simple Omelette Recipe</h1>
+          <p>
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
+          </p>
 
-    <div>
-      <h2>Preparation time</h2>
-      <ul>
-        <li><strong>Total:</strong> Approximately 10 minutes</li>
-        <li><strong>Preparation:</strong> 5 minutes</li>
-        <li><strong>Cooking:</strong> 5 minutes</li>
-      </ul>
-    </div>
+          <div class="bg-pink-100 rounded-lg p-4">
+            <h3 class="text-xl pb-2 font-bold text-pink-800">
+              Preparation time
+            </h3>
+            <ul class="list-disc pl-7 space-y-2">
+              <li><strong>Total:</strong> Approximately 10 minutes</li>
+              <li><strong>Preparation:</strong> 5 minutes</li>
+              <li><strong>Cooking:</strong> 5 minutes</li>
+            </ul>
+          </div>
 
-    <div>
-      <h2>Ingredients</h2>
-      <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>
-          Optional fillings: cheese, diced vegetables, cooked meats, herbs
-        </li>
-      </ul>
-    </div>
+          <div class="border-b border-black pb-7">
+            <h2 class="text-2xl pb-4 text-brown font-bold">Ingredients</h2>
+            <ul class="list-disc pl-7 space-y-2">
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </div>
 
-    <div>
-      <h2>Instructions</h2>
-      <ol>
-        <li>
-          <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch
-          of salt and pepper until they are well mixed. You can add a tablespoon
-          of water or milk for a fluffier texture.
-        </li>
-        <li>
-          <strong>Heat the pan:</strong> Place a non-stick frying pan over
-          medium heat and add butter or oil.
-        </li>
-        <li>
-          <strong>Cook the omelette:</strong> Once the butter is melted and
-          bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
-          coat the surface.
-        </li>
-        <li>
-          <strong>Add fillings (optional):</strong> When the eggs begin to set
-          at the edges but are still slightly runny in the middle, sprinkle your
-          chosen fillings over one half of the omelette.
-        </li>
-        <li>
-          <strong>Fold and serve:</strong> As the omelette continues to cook,
-          carefully lift one edge and fold it over the fillings. Let it cook for
-          another minute, then slide it onto a plate.
-        </li>
-        <li>
-          <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if
-          needed.
-        </li>
-      </ol>
-    </div>
+          <div class="border-b border-black pb-7">
+            <h2 class="text-2xl pb-4 text-brown font-bold">Instructions</h2>
+            <ol class="list-decimal space-y-2 ml-5">
+              <li>
+                <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
+                pinch of salt and pepper until they are well mixed. You can add
+                a tablespoon of water or milk for a fluffier texture.
+              </li>
+              <li>
+                <strong>Heat the pan:</strong> Place a non-stick frying pan over
+                medium heat and add butter or oil.
+              </li>
+              <li>
+                <strong>Cook the omelette:</strong> Once the butter is melted
+                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </li>
+              <li>
+                <strong>Add fillings (optional):</strong> When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+              </li>
+              <li>
+                <strong>Fold and serve:</strong> As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings. Let
+                it cook for another minute, then slide it onto a plate.
+              </li>
+              <li>
+                <strong>Enjoy:</strong> Serve hot, with additional salt and
+                pepper if needed.
+              </li>
+            </ol>
+          </div>
 
-    <div>
-      <h2>Nutrition</h2>
-      <p>
-        The table below shows nutritional values per serving without the
-        additional fillings.
-      </p>
-      <div>
-        <table>
-          <tbody>
-            <tr>
-              <td>Calories</td>
-              <td>277kcal</td>
-            </tr>
-            <tr>
-              <td>Carbs</td>
-              <td>0g</td>
-            </tr>
-            <tr>
-              <td>Protein</td>
-              <td>20g</td>
-            </tr>
-            <tr>
-              <td>Fat</td>
-              <td>22g</td>
-            </tr>
-          </tbody>
-        </table>
+          <div>
+            <h2 class="text-2xl pb-4 text-brown font-bold">Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+            <div>
+              <table class="w-full">
+                <tbody>
+                  <tr class="border-b border-black">
+                    <td>Calories</td>
+                    <td class="font-bold py-2 text-brown">277kcal</td>
+                  </tr>
+                  <tr class="border-b border-black">
+                    <td>Carbs</td>
+                    <td class="font-bold py-2 text-brown">0g</td>
+                  </tr>
+                  <tr class="border-b border-black">
+                    <td>Protein</td>
+                    <td class="font-bold py-2 text-brown">20g</td>
+                  </tr>
+                  <tr>
+                    <td>Fat</td>
+                    <td class="font-bold py-2 text-brown">22g</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </main>
 
     <div class="attribution">
       Challenge by
